--- a/Problem3.html
+++ b/Problem3.html
@@ -8,17 +8,17 @@
     <script>
       let userName = prompt("사용자 이름을 입력해주세요.", "");
 
-      if (userName === "LikeLion") {
+      if (userName == "LikeLion") {
         let pass = prompt("비밀번호:", "");
 
-        if ("이 칸에 코드를 작성해주세요!!!") {
+        if (pass=="KingJS") {
           alert("환영합니다!");
-        } else if ("이 칸에 코드를 작성해주세요!!!") {
+        } else if ((pass==null)||(pass=='')) {
           alert("취소되었습니다.");
         } else {
           alert("인증에 실패하였습니다.");
         }
-      } else if ("이 칸에 코드를 작성해주세요!!!") {
+      } else if ((userName==null)||(userName=='')) {
         alert("취소되었습니다.");
       } else {
         alert("인증되지 않은 사용자입니다.");
